--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<module>de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl</module>
 		<module>de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</module>
 		<module>de.tudarmstadt.ukp.dkpro.wsd.examples-gpl</module>
+		<module>de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
