--- a/de.tudarmstadt.ukp.dkpro.wsd.si.germanet/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.si.germanet/pom.xml
@@ -33,5 +33,15 @@
   		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
   		<artifactId>de.tudarmstadt.ukp.dkpro.wsd.core</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>net.sf.jung</groupId>
+  		<artifactId>jung-api</artifactId>
+  		<version>2.0.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>net.sf.jung</groupId>
+  		<artifactId>jung-graph-impl</artifactId>
+  		<version>2.0.1</version>
+  	</dependency>
   </dependencies>
 </project>
