--- a/de.tudarmstadt.ukp.dkpro.wsd.si.germanet-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.si.germanet-gpl/pom.xml
@@ -25,7 +25,7 @@
     <artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
     <version>0.9.2-SNAPSHOT</version>
   </parent>
-  <artifactId>de.tudarmstadt.ukp.dkpro.wsd.si.germanet</artifactId>
+  <artifactId>de.tudarmstadt.ukp.dkpro.wsd.si.germanet-gpl</artifactId>
   <name>DKPro WSD GPL - GermaNet</name>
   <description>A DKPro WSD sense inventory module wrapping the GermaNet Java API</description>
   <dependencies>
