--- a/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
@@ -97,6 +97,13 @@
 			<artifactId>libsvm</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+			<artifactId>
+				de.tudarmstadt.ukp.dkpro.wsd.evaluation
+			</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<name>DKPro WSD GPL - IMS</name>
 	<description>DKPro WSD modules for the It Makes Sense (IMS) disambiguation system</description>
