--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 			<dependency>
 				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 				<artifactId>de.tudarmstadt.ukp.dkpro.wsd.core</artifactId>
-				<version>1.1.0-SNAPSHOT</version>
+				<version>1.1.0</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -113,6 +113,7 @@
 					<excludes>
 						<exclude>release.properties</exclude>
 						<exclude>CHANGES</exclude>
+						<exclude>ChangeLog.txt</exclude>
 						<exclude>NOTICE.txt</exclude>
 						<exclude>README.txt</exclude>
 						<exclude>LICENSE.txt</exclude>
