--- a/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 		<artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<version>1.1.0</version>
 	</parent>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd.examples-gpl</artifactId>
 	<dependencies>
