--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	</parent>
 	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.1.0</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl</module>
@@ -51,28 +51,28 @@
 				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl
   			</artifactId>
-				<version>1.1.0-SNAPSHOT</version>
+				<version>1.1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.examples-gpl
   			</artifactId>
-				<version>1.1.0-SNAPSHOT</version>
+				<version>1.1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl
   			</artifactId>
-				<version>1.1.0-SNAPSHOT</version>
+				<version>1.1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl
   			</artifactId>
-				<version>1.1.0-SNAPSHOT</version>
+				<version>1.1.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -81,9 +81,9 @@
 	<description>DKPro WSD is a UIMA framework for word sense disambiguation licensed under the Apache License 2.0. This project contains GPL-licensed components for use with the main DKPro WSD project. </description>
 	<inceptionYear>2013</inceptionYear>
 	<scm>
-		<url>https://code.google.com/p/dkpro-wsd-gpl/source/browse/#svn/trunk</url>
-		<connection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/trunk</connection>
-		<developerConnection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/trunk</developerConnection>
+		<url>https://code.google.com/p/dkpro-wsd-gpl/source/browse/#svn/tags/de.tudarmstadt.ukp.dkpro.wsd-gpl-1.1.0</url>
+		<connection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/tags/de.tudarmstadt.ukp.dkpro.wsd-gpl-1.1.0</connection>
+		<developerConnection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/tags/de.tudarmstadt.ukp.dkpro.wsd-gpl-1.1.0</developerConnection>
 	</scm>
 	<issueManagement>
 		<system>Google Code</system>
