--- a/de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl/pom.xml
@@ -32,6 +32,7 @@
   		<artifactId>
   			de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl
   		</artifactId>
+    <version>1.2.0-SNAPSHOT</version>
   	</dependency>
   </dependencies>
   <name>DKPro WSD GPL - TWSI disambiguation</name>
