--- a/de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl/pom.xml
@@ -70,6 +70,7 @@
   		<artifactId>
   			de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl
   		</artifactId>
+	    <version>1.2.0-SNAPSHOT</version>
   	</dependency>
   	<dependency>
   		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
@@ -81,7 +82,7 @@
   		<dependency>
   			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
   			<artifactId>de.tudarmstadt.ukp.dkpro.core-gpl</artifactId>
-  			<version>1.5.0</version>
+  			<version>1.6.2</version>
   			<type>pom</type>
   			<scope>import</scope>
   		</dependency>
