--- a/de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
     <artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
   </parent>
   <artifactId>de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl</artifactId>
   <name>DKPro WSD GPL - Wrapper</name>
@@ -70,7 +70,7 @@
   		<artifactId>
   			de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl
   		</artifactId>
-	    <version>1.2.0-SNAPSHOT</version>
+	    <version>1.2.0</version>
   	</dependency>
   	<dependency>
   		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
