--- a/de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
     <artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0-SNAPSHOT</version>
   </parent>
   <artifactId>de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl</artifactId>
   <dependencies>
@@ -32,7 +32,7 @@
   		<artifactId>
   			de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl
   		</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0-SNAPSHOT</version>
   	</dependency>
   </dependencies>
   <name>DKPro WSD GPL - TWSI disambiguation</name>
