--- a/de.tudarmstadt.ukp.dkpro.wsd-asl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd-asl/pom.xml
@@ -18,13 +18,13 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<artifactId>dkpro-parent-pom</artifactId>
-		<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
-		<version>9</version>
+		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+		<artifactId>de.tudarmstadt.ukp.dkpro.wsd</artifactId>
+		<version>1.3.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
-	<artifactId>de.tudarmstadt.ukp.dkpro.wsd</artifactId>
+	<artifactId>de.tudarmstadt.ukp.dkpro.wsd-asl</artifactId>
 	<version>1.3.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<dependencies>
@@ -131,25 +131,23 @@
 		</dependencies>
 	</dependencyManagement>
 	<modules>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.core</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.io</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.linkbased.wikipedia</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.si.linkdatabase</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.si.lsr</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.testing</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.evaluation</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.alignment</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.si.wordnet</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.si.uby</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.si.dictionary</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.lesk</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.tackbp</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.senseval</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.wsi</module>
-		<module>
-			de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity.wikipedia
-		</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.core</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.io</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.linkbased.wikipedia</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.si.linkdatabase</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.si.lsr</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.testing</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.evaluation</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.alignment</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.si.wordnet</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.si.uby</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.si.dictionary</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.lesk</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.tackbp</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.senseval</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.wsi</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity.wikipedia</module>
 	</modules>
 	<profiles>
 		<profile>
@@ -195,58 +193,9 @@
 			</build>
 		</profile>
 	</profiles>
-	<name>DKPro WSD</name>
-	<url>https://code.google.com/p/dkpro-wsd/</url>
+	<name>DKPro WSD ASL</name>
 	<description>DKPro WSD is a UIMA framework for word sense disambiguation. It is designed to complement DKPro Core, a collection of software components for natural language processing (NLP) based on the Apache UIMA framework. </description>
 	<inceptionYear>2013</inceptionYear>
-	<scm>
-		<url>https://code.google.com/p/dkpro-wsd/source/browse/#svn/trunk</url>
-		<connection>scm:svn:https://dkpro-wsd.googlecode.com/svn/trunk</connection>
-		<developerConnection>scm:svn:https://dkpro-wsd.googlecode.com/svn/trunk</developerConnection>
-	</scm>
-	<issueManagement>
-		<system>Google Code</system>
-		<url>https://code.google.com/p/dkpro-wsd/issues/list</url>
-	</issueManagement>
-	<build>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-webdav</artifactId>
-				<version>1.0-beta-2</version>
-			</extension>
-		</extensions>
-	</build>
-	<repositories>
-		<repository>
-			<id>ukp-oss-releases</id>
-			<url>http://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-releases</url>
-		</repository>
-	</repositories>
-	<distributionManagement>
-		<repository>
-			<id>ukp-oss</id>
-			<url>dav:https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-ukp-releases-local</url>
-		</repository>
-		<snapshotRepository>
-			<id>ukp-oss</id>
-			<url>dav:https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-ukp-snapshots-local</url>
-		</snapshotRepository>
-	</distributionManagement>
-	<developers>
-		<developer>
-			<id>miller</id>
-			<name>Tristan Miller</name>
-			<email>miller@ukp.informatik.tu-darmstadt.de</email>
-			<url>http://www.nothingisreal.com/</url>
-			<organization>Ubiquitous Knowledge Processing Lab, Department of Computer Science, Technische Universität Darmstadt</organization>
-			<organizationUrl>http://www.ukp.tu-darmstadt.de/</organizationUrl>
-			<roles>
-				<role>developer</role>
-			</roles>
-			<timezone>Europe/Berlin</timezone>
-		</developer>
-	</developers>
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
