--- a/de.tudarmstadt.ukp.dkpro.wsd-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd-gpl/pom.xml
@@ -20,22 +20,22 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
-		<artifactId>dkpro-parent-pom</artifactId>
-		<version>9</version>
+		<parent>
+		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+		<artifactId>de.tudarmstadt.ukp.dkpro.wsd</artifactId>
+		<version>1.3.0-SNAPSHOT</version>
 	</parent>
 	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
 	<version>1.3.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.examples-gpl</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.si.germanet-gpl</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.examples-gpl</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl</module>
+		<module>../de.tudarmstadt.ukp.dkpro.wsd.si.germanet-gpl</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
@@ -80,23 +80,7 @@
 	<url>https://code.google.com/p/dkpro-wsd-gpl/</url>
 	<description>DKPro WSD is a UIMA framework for word sense disambiguation licensed under the Apache License 2.0. This project contains GPL-licensed components for use with the main DKPro WSD project. </description>
 	<inceptionYear>2013</inceptionYear>
-	<scm>
-		<url>https://code.google.com/p/dkpro-wsd-gpl/source/browse/#svn/trunk</url>
-		<connection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/trunk</connection>
-		<developerConnection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/trunk</developerConnection>
-	</scm>
-	<issueManagement>
-		<system>Google Code</system>
-		<url>https://code.google.com/p/dkpro-wsd/issues/list</url>
-	</issueManagement>
 	<build>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-webdav</artifactId>
-				<version>1.0-beta-2</version>
-			</extension>
-		</extensions>
 		<plugins>
 			<plugin>
 				<inherited>true</inherited>
@@ -137,36 +121,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	<distributionManagement>
-		<repository>
-			<id>ukp-oss</id>
-			<url>dav:https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-ukp-releases-local</url>
-		</repository>
-		<snapshotRepository>
-			<id>ukp-oss</id>
-			<url>dav:https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-ukp-snapshots-local</url>
-		</snapshotRepository>
-	</distributionManagement>
-	<repositories>
-		<repository>
-			<id>ukp-oss-releases</id>
-			<url>http://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-releases</url>
-		</repository>
-	</repositories>
-	<developers>
-		<developer>
-			<id>miller</id>
-			<name>Tristan Miller</name>
-			<email>miller@ukp.informatik.tu-darmstadt.de</email>
-			<url>http://www.nothingisreal.com/</url>
-			<organization>Ubiquitous Knowledge Processing Lab, Department of Computer Science, Technische Universität Darmstadt</organization>
-			<organizationUrl>http://www.ukp.tu-darmstadt.de/</organizationUrl>
-			<roles>
-				<role>developer</role>
-			</roles>
-			<timezone>Europe/Berlin</timezone>
-		</developer>
-	</developers>
 	<licenses>
 		<license>
 			<name>The GNU General Public License, version 3.0</name>
