--- a/de.tudarmstadt.ukp.dkpro.wsd.si.lsr/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.si.lsr/pom.xml
@@ -18,7 +18,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>de.tudarmstadt.ukp.dkpro.wsd</artifactId>
+    <artifactId>de.tudarmstadt.ukp.dkpro.wsd-asl</artifactId>
     <groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
     <version>1.3.0-SNAPSHOT</version>
   </parent>
