--- a/de.tudarmstadt.ukp.dkpro.wsd.wsi/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.wsi/pom.xml
@@ -19,7 +19,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
-		<artifactId>de.tudarmstadt.ukp.dkpro.wsd</artifactId>
+		<artifactId>de.tudarmstadt.ukp.dkpro.wsd-asl</artifactId>
 		<version>1.3.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd.wsi</artifactId>
