--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<module>de.tudarmstadt.ukp.dkpro.wsd-gpl</module>
 	</modules>
 	<name>DKPro WSD</name>
-	<url>https://github.com/dkpro/dkpro-wsd/</url>
+	<url> https://dkpro.github.io/dkpro-wsd</url>
 	<description>DKPro WSD is a UIMA framework for word sense disambiguation. It is designed to complement DKPro Core, a collection of software components for natural language processing (NLP) based on the Apache UIMA framework. </description>
 	<inceptionYear>2013</inceptionYear>
 	<scm>
