--- a/_config.yml
+++ b/_config.yml
@@ -205,7 +205,7 @@ sass:
 #
 # used in _includes/footer_scripts.html
 
-#google_analytics_tracking_id: UA-42808742-2
+google_analytics_tracking_id: UA-42808742-2
 
 
 #      ____                   __  __      __  
